syntax = "proto3";

package proto;

service KeyValueStore {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Put(PutRequest) returns (PutResponse) {}
    rpc PutAndBroadcast(PutRequest) returns (PutResponse) {}
    rpc PutToGetStreamResponse(PutRequest) returns (stream PutResponse) {}
}

// You'll likely need to define more specific return codes than these!
enum ReturnCode {
    SUCCESS = 0;
    FAILURE_GET_NOKEY = 1;
    FAILURE_GET_NOTLEADER = 2;
    FAILURE_PUT = 3;

}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    ReturnCode ret = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
    string selfID = 3;
    string leaderID = 4;
}

message PutResponse {
    ReturnCode ret = 1;
}